# boleto-parser

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  noxfile.py  pyproject.toml  test_parser.py
docs/: cli.md  estrategia_parsing_universal.md  example_schema.json  progresso_implementacao.md  search.js  src.html
src/: README.md  __init__.py  __main__.py  api.py  cli.py  digitavel.py  logger.py  models.py  parser.py  test_split_digitavel.py
src/api/: main.py  routes_decode.py  routes_extract_text.py  routes_health.py  routes_parse.py  routes_validate.py  schemas.py
src/cli/: __init__.py  dev.py  helpers.py  main.py  prod.py
src/core/: __init__.py  boleto.py  digitavel.py  enums.py  validators.py
src/models/: __init__.py  aluno.py  banco.py  beneficiario.py  boleto_data.py  endereco.py  instrucoes.py  pagador.py  valores.py
src/parser/: __init__.py  decoder.py  extractors.py  parser.py
src/prototypes/: __init__.py  prototype_analise_dv_detalhada.py  prototype_correcao_dv.py  prototype_integracao_completa.py  prototype_validacao_dv_completa.py
src/tests/: __init__.py  test_boleto_classe.py  test_digitavel.py  test_digitavel_avancado.py  test_digitavel_camada1.py  test_digitavel_camada2.py  test_digitavel_mock.py  test_parser.py  test_prototype_real.py  test_split_digitavel.py
src/utils/: __init__.py  dv.py
tests/: test_boleto_parser.py  test_logging.py
